--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -22,11 +22,21 @@
             </div>
           </div>
           <div class="col-6">
-            <img
-              id="img-slide"
-              src="../../../../assets/img/xbanner-img.png.pagespeed.ic.xt3MuruiIf.webp"
-              alt=""
-            />
+            <video
+              class=""
+              autoplay=""
+              loop=""
+              playsinline=""
+              poster="https://image.hsv-tech.io/1920x0/reebok/common/57802899-4063-49a1-ae13-016a5e73029f.webp"
+              style="object-fit: cover; height: 100%; width: 100%"
+            >
+              <source
+                datasrc="https://video.hsv-tech.io/reebok/common/7294ea91-2942-48a0-95a4-ca364919c122.mp4"
+                data-src="https://video.hsv-tech.io/reebok/common/7294ea91-2942-48a0-95a4-ca364919c122.mp4"
+                type="video/mp4"
+                src="https://video.hsv-tech.io/reebok/common/7294ea91-2942-48a0-95a4-ca364919c122.mp4"
+              />
+            </video>
           </div>
         </div>
       </div>
