--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,124 +1,128 @@
-<table class="table mb-4">
-  <thead>
-    <tr>
-      <th scope="col">Product</th>
-      <th scope="col">Price</th>
-      <th scope="col">Quantity</th>
-      <th scope="col">Total</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        <div class="row align-items-center">
-          <div class="col-4">
-            <img src="https://m.media-amazon.com/images/I/41OuvqjhaqL.jpg" />
+<div class="container">
+  <table class="table mb-4">
+    <thead>
+      <tr>
+        <th scope="col">Product</th>
+        <th scope="col">Price</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <div class="row align-items-center">
+            <div class="col-4">
+              <img src="https://m.media-amazon.com/images/I/41OuvqjhaqL.jpg" />
+            </div>
+            <div class="col-8">Minimalistic shop for multipurpose use</div>
           </div>
-          <div class="col-8">Minimalistic shop for multipurpose use</div>
-        </div>
-      </td>
-      <td>
-        <span class="font-weight-bold">$360.00</span>
-      </td>
-      <td>
-        <div style="width: 70px">
-          <input type="number" class="form-control" value="1" />
-        </div>
-      </td>
-      <td><span class="font-weight-bold">$360.00</span></td>
-    </tr>
-    <tr>
-      <td>
-        <button
-          class="btn btn-secondary rounded-0 px-5 text-white font-weight-bold"
-        >
-          UPDATE CART
-        </button>
-      </td>
-      <td colspan="3">
-        <div class="d-flex align-items-center">
-          <input
-            type="text"
-            class="form-control rounded-0"
-            placeholder="Enter Coupon"
-          />
+        </td>
+        <td>
+          <span class="font-weight-bold">$360.00</span>
+        </td>
+        <td>
+          <div style="width: 70px">
+            <input type="number" class="form-control" value="1" />
+          </div>
+        </td>
+        <td><span class="font-weight-bold">$360.00</span></td>
+      </tr>
+      <tr>
+        <td>
           <button
-            class="btn btn-primary gradient px-5 rounded-0 text-white font-weight-bold"
+            class="btn btn-secondary rounded-0 px-5 text-white font-weight-bold"
           >
-            Apply
+            UPDATE CART
           </button>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="1"></td>
-      <td><p class="font-weight-bold">Subtotal</p></td>
-      <td colspan="2"><p class="font-weight-bold">$2160.00</p></td>
-    </tr>
-    <tr>
-      <td colspan="1"></td>
-      <td><p class="font-weight-bold">Shipping</p></td>
-      <td colspan="2">
-        <ul class="list">
-          <li>
-            <div class="custom-control custom-radio custom-control-inline">
-              <label class="custom-control-label">Flat Rate: $5.00</label>
-              <input
-                type="radio"
-                name="customRadioInline"
-                class="custom-control-input"
-              />
-            </div>
-          </li>
-          <li>
-            <div class="custom-control custom-radio custom-control-inline">
-              <label class="custom-control-label">Free Shipping</label>
-              <input
-                type="radio"
-                name="customRadioInline"
-                class="custom-control-input"
-              />
-            </div>
-          </li>
-          <li>
-            <div class="custom-control custom-radio custom-control-inline">
-              <label class="custom-control-label">Flat Rate: $10.00</label>
-              <input
-                type="radio"
-                name="customRadioInline"
-                class="custom-control-input"
-              />
-            </div>
-          </li>
-          <li>
-            <div class="custom-control custom-radio custom-control-inline">
-              <label class="custom-control-label">Local Delivery: $2.00</label>
-              <input
-                type="radio"
-                name="customRadioInline"
-                class="custom-control-input"
-              />
-            </div>
-          </li>
-        </ul>
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td colspan="3">
-        <div class="d-flex align-items-center">
-          <button
-            class="btn btn-secondary px-5 rounded-0 text-white font-weight-bold"
-          >
-            CONTINUE SHOPPING
-          </button>
-          <button
-            class="btn btn-primary gradient px-5 rounded-0 text-white font-weight-bold"
-          >
-            CHECKOUT
-          </button>
-        </div>
-      </td>
-    </tr>
-  </tbody>
-</table>
+        </td>
+        <td colspan="3">
+          <div class="d-flex align-items-center">
+            <input
+              type="text"
+              class="form-control rounded-0"
+              placeholder="Enter Coupon"
+            />
+            <button
+              class="btn btn-primary gradient px-5 rounded-0 text-white font-weight-bold"
+            >
+              Apply
+            </button>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="1"></td>
+        <td><p class="font-weight-bold">Subtotal</p></td>
+        <td colspan="2"><p class="font-weight-bold">$2160.00</p></td>
+      </tr>
+      <tr>
+        <td colspan="1"></td>
+        <td><p class="font-weight-bold">Shipping</p></td>
+        <td colspan="2">
+          <ul class="list">
+            <li>
+              <div class="custom-control custom-radio custom-control-inline">
+                <label class="custom-control-label">Flat Rate: $5.00</label>
+                <input
+                  type="radio"
+                  name="customRadioInline"
+                  class="custom-control-input"
+                />
+              </div>
+            </li>
+            <li>
+              <div class="custom-control custom-radio custom-control-inline">
+                <label class="custom-control-label">Free Shipping</label>
+                <input
+                  type="radio"
+                  name="customRadioInline"
+                  class="custom-control-input"
+                />
+              </div>
+            </li>
+            <li>
+              <div class="custom-control custom-radio custom-control-inline">
+                <label class="custom-control-label">Flat Rate: $10.00</label>
+                <input
+                  type="radio"
+                  name="customRadioInline"
+                  class="custom-control-input"
+                />
+              </div>
+            </li>
+            <li>
+              <div class="custom-control custom-radio custom-control-inline">
+                <label class="custom-control-label"
+                  >Local Delivery: $2.00</label
+                >
+                <input
+                  type="radio"
+                  name="customRadioInline"
+                  class="custom-control-input"
+                />
+              </div>
+            </li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td colspan="3">
+          <div class="d-flex align-items-center">
+            <button
+              class="btn btn-secondary px-5 rounded-0 text-white font-weight-bold"
+            >
+              CONTINUE SHOPPING
+            </button>
+            <button
+              class="btn btn-primary gradient px-5 rounded-0 text-white font-weight-bold"
+            >
+              CHECKOUT
+            </button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
