--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,7 @@
 // navcontainer
 .nav-container {
   position: sticky;
-  // top: 50px;
+  top: 0px;
+  z-index: 100;
   box-shadow: 0 10px 30px rgb(0 0 0 / 10%);
 }
