--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,94 +1,43 @@
 <div>
   <!-- background-img -->
   <ngb-carousel *ngIf="images">
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <video
+          id="img-slide"
+          loop=""
+          muted=""
+          autoplay=""
+          class="promo-background-video-desktop hide-for-small-only"
+        >
+          <source
+            src="https://media.jdsports.com/v/jdsports/JD_GA_050922_OzweegoLilDurkMay1213x600/mp4_720p"
+            type="video/mp4"
+          />
+        </video>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="../../../../assets/img/slide3.webp" id="img-slide" />
+      </div>
+    </ng-template>
     <ng-template ngbSlide class="content-slide">
-      <div class="picsum-img-wrapper">
-        <img src="../../../../assets/img/backgroup.webp" id="img-slide" />
-      </div>
-      <div class="carousel-caption text-primary content-slide">
-        <div class="slide row my-auto text-dark">
-          <div class="col-6">
-            <h1 class="text-capitalize">Nike new collection</h1>
-            <p class="text-left" style="opacity: 0.7">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation.
-            </p>
-            <div class="row">
-              <div class="col-1">
-                <i class="fas fa-plus add-icon bg-gradient-warning"></i>
-              </div>
-              <div class="col-3 ml-4 my-auto">Add to bag</div>
-            </div>
-          </div>
-          <div class="col-6">
-            <img
-              id="img-slide"
-              src="../../../../assets/img/xbanner-img.png.pagespeed.ic.xt3MuruiIf.webp"
-              alt=""
-            />
-          </div>
-        </div>
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img src="../../../../assets/img/backgroup.webp" id="img-slide" />
-      </div>
-      <div class="carousel-caption text-primary content-slide">
-        <div class="slide row my-auto text-dark">
-          <div class="col-6">
-            <h1 class="text-capitalize">Nike</h1>
-            <p class="text-left" style="opacity: 0.7">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation.
-            </p>
-            <div class="row">
-              <div class="col-1">
-                <i class="fas fa-plus add-icon bg-gradient-warning"></i>
-              </div>
-              <div class="col-3 ml-4 my-auto">Add to bag</div>
-            </div>
-          </div>
-          <div class="col-6">
-            <img
-              id="img-slide"
-              src="../../../../assets/img/xbanner-img.png.pagespeed.ic.xt3MuruiIf.webp"
-              alt=""
-            />
-          </div>
-        </div>
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img src="../../../../assets/img/backgroup.webp" id="img-slide" />
-      </div>
-      <div class="carousel-caption text-primary content-slide">
-        <div class="slide row my-auto text-dark">
-          <div class="col-6">
-            <h1 class="text-capitalize">Nike new collection</h1>
-            <p class="text-left" style="opacity: 0.7">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation.
-            </p>
-            <div class="row">
-              <div class="col-1">
-                <i class="fas fa-plus add-icon bg-gradient-warning"></i>
-              </div>
-              <div class="col-3 ml-4 my-auto">Add to bag</div>
-            </div>
-          </div>
-          <div class="col-6">
-            <img
-              id="img-slide"
-              src="../../../../assets/img/xbanner-img.png.pagespeed.ic.xt3MuruiIf.webp"
-              alt=""
-            />
-          </div>
-        </div>
+      <div class="picsum-img-wrapper" id="img-slide">
+        <video
+          autoplay=""
+          loop=""
+          playsinline=""
+          poster="https://image.hsv-tech.io/1920x0/reebok/common/57802899-4063-49a1-ae13-016a5e73029f.webp"
+          style="object-fit: cover; height: 100%; width: 100%"
+        >
+          <source
+            datasrc="https://video.hsv-tech.io/reebok/common/7294ea91-2942-48a0-95a4-ca364919c122.mp4"
+            data-src="https://video.hsv-tech.io/reebok/common/7294ea91-2942-48a0-95a4-ca364919c122.mp4"
+            type="video/mp4"
+            src="https://video.hsv-tech.io/reebok/common/7294ea91-2942-48a0-95a4-ca364919c122.mp4"
+          />
+        </video>
       </div>
     </ng-template>
   </ngb-carousel>
