--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,5 +50,8 @@ body {
 .gradient {
   background-image: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
 }
+.container-xl {
+  width: 1400px;
+}
 
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
