--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       </a>
 
       <div class="collapse navbar-collapse" id="nav-bar">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto align-items-center">
           <li class="nav-item">
             <a class="nav-link" routerLink="/home" routerLinkActive="active"
               >Home</a
@@ -43,7 +43,7 @@
             ></a>
           </li>
           <li class="nav-item my-auto">
-            <div class="searchBox">
+            <div class="searchBox d-flex align-items-center">
               <input
                 class="searchInput"
                 type="text"
