--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -44,7 +44,7 @@
 </div>
 <div class="container-xl">
   <!-- layout2 -->
-  <div class="container-xl row mx-auto text-center margin-100">
+  <div class="row mx-auto text-center margin-100">
     <div class="col-3">
       <p><i class="fas fa-truck"></i></p>
       <h5>Free Delivery</h5>
