--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,15 +1,19 @@
 <div class="container-xl" *ngIf="detailProduct">
   <div class="detail-product row">
     <div class="col-6 p-5">
-      <img
-        [src]="detailProduct.images_list[0]"
-        alt=""
-        class="detailProductImg"
-      />
+      <ngb-carousel *ngIf="detailProduct.images_list">
+        <ng-template ngbSlide *ngFor="let img of detailProduct.images_list">
+          <div class="picsum-img-wrapper" id="img-product-detail">
+            <img [src]="img" class="mx-auto" />
+          </div>
+        </ng-template>
+      </ngb-carousel>
     </div>
     <div class="col-6 p-5">
       <h3>{{ detailProduct.brand }}</h3>
-      <h2 class="text-warning">{{ detailProduct.price }}</h2>
+      <h2 class="text-warning">
+        {{ detailProduct.price | price | currency: "USD" }}
+      </h2>
       <p>
         <span class="d-inline-block w-15">Material</span>
         <span class="text-primary"
@@ -23,9 +27,10 @@
         <input type="number" class="ml-3 w-15 border border-light rounded" />
       </div>
       <div class="my-3" id="icon-product">
-        <button class="btn btn-primary text-uppercase px-4">add to card</button>
+        <button class="btn bg-primary gradient text-uppercase px-4">
+          add to card
+        </button>
         <i class="fas fa-heart mx-2 rounded-circle"></i>
-        <p>test</p>
       </div>
     </div>
   </div>
