--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,15 +2,16 @@ $primary: #ff7200;
 $secondary: #222222;
 $danger: #ff304f;
 $info: #0f81c7;
-
 $warning: #ffae00;
 $light: #e8f0f2;
-
 $dark: #000000;
 $enable-gradients: true;
 $spacer: 1rem;
 $border-width: 1px;
 $btn-border-radius: 0.25rem;
+.xl {
+  max-width: 1400px;
+}
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
@@ -49,9 +50,6 @@ body {
 
 .gradient {
   background-image: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
-}
-.container-xl {
-  width: 1400px;
 }
 
 @import "~bootstrap/scss/bootstrap";
