--- a/src/app/components/shoes-container/shoe-preview/shoe-preview.component.html
+++ b/src/app/components/shoes-container/shoe-preview/shoe-preview.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="my-4" id="icon-product">
-    <i class="fas fa-briefcase mx-2 rounded-circle"></i>
+    <i class="fas fa-briefcase mx-2 rounded-circle" (click)="addItem()"></i>
     <i class="fas fa-heart mx-2 rounded-circle"></i>
     <i class="fas fa-info mx-2 rounded-circle"></i>
   </div>
