--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -84,7 +84,25 @@ a {
   line-height: 20px;
   width: 0px;
 }
-
+.cart {
+  position: relative;
+  &:before {
+    content: attr(data-totalitems);
+    font-size: 12px;
+    font-weight: 600;
+    position: absolute;
+    top: -6px;
+    right: -4px;
+    background: #ff7200;
+    line-height: 22px;
+    padding: 0 6px;
+    height: 22px;
+    min-width: 22px;
+    color: white;
+    text-align: center;
+    border-radius: 22px;
+  }
+}
 @media screen and (max-width: 620px) {
   .searchBox:hover > .searchInput {
     width: 150px;
