css product and logic shopping cart

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,5 +1,4 @@
-<div class="backgroud-img" style="height: 40vh"></div>
-<div class="container-xl mt-50">
+<div class="container-xl mt-50 mb-5">
   <div class="row">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.572897998222!2d105.53297571453567!3d21.009750993803703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31345bb9d76a7e03%3A0x244a83c591357341!2zRlBUIFNvZnR3YXJlIEjDsmEgTOG6oWM!5e0!3m2!1svi!2s!4v1653536624879!5m2!1svi!2s"
