--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,16 +1,18 @@
-<div class="bg-secondary p-5 mt-5">
-  <div class="container my-5">
+<div class="bg-secondary p-5">
+  <div class="container my-3">
     <div class="row">
       <div class="col-xl-3 col-md-6 col-sm-12">
         <h5 class="text-white font-weight-bolder my-3">About Us</h5>
-        <p class="text-muted">
+        <p class="text-white" style="opacity: 0.6">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore dolore magna aliqua.
         </p>
       </div>
       <div class="col-xl-4 col-md-6 col-sm-12">
         <h5 class="text-white font-weight-bolder my-3">Newsletter</h5>
-        <p class="text-muted">Stay update with our latest</p>
+        <p class="text-white" style="opacity: 0.6">
+          Stay update with our latest
+        </p>
         <div class="input-group">
           <input
             type="text"
@@ -67,7 +69,7 @@
       </div>
       <div class="col-xl-2 col-md-6 col-sm-12">
         <h5 class="text-white font-weight-bolder my-3">Follow Us</h5>
-        <p class="text-muted">Let us be social</p>
+        <p class="text-white" style="opacity: 0.6">Let us be social</p>
         <div class="row">
           <div class="col"><i class="fab fa-facebook-f text-muted"></i></div>
           <div class="col"><i class="fab fa-twitter text-muted"></i></div>
@@ -76,10 +78,10 @@
         </div>
       </div>
     </div>
-    <p class="text-muted text-center my-5">
+    <p class="text-white text-center my-3" style="opacity: 0.6">
       Copyright &#169;2022 All rights reserved | This template is made with
-      <i class="fas fa-heart text-primary"></i> by
-      <span class="text-primary">NgaHT10</span>
+      <i class="fas fa-heart text-primary px-1"></i> by
+      <span class="text-primary">NhatTV9 NgaHT10 </span>
     </p>
   </div>
 </div>
