--- a/src/app/components/shoe-category/shoe-category.component.html
+++ b/src/app/components/shoe-category/shoe-category.component.html
@@ -1,7 +1,6 @@
-<div class="backgroud-img" style="height: 40vh"></div>
 <div class="row container-xl mx-auto mt-5">
   <div class="col-3 shadow">
-    <div class="row bg-light p-4 align-items-center">
+    <div class="row p-4 align-items-center bg-primary" id="nav-category">
       <h5 class="text-white m-0 p-0">Product Fillters</h5>
     </div>
     <div class="form-check p-3">
@@ -21,7 +20,7 @@
   </div>
   <div class="col-9 pl-5">
     <!-- nav-catagory -->
-    <div class="row bg-light p-2 align-items-center">
+    <div class="row p-2 align-items-center" id="nav-category">
       <select
         class="form-select w-10"
         aria-label="Default select example"
@@ -42,7 +41,7 @@
       ></ngb-pagination>
     </div>
     <!-- show product -->
-    <div class="row">
+    <div class="row shadow">
       <div class="col-4" *ngFor="let item of products">
         <app-shoe-preview
           [numberCharater]="40"
@@ -52,5 +51,5 @@
     </div>
     <!-- paging -->
   </div>
-  <app-deal-week></app-deal-week>
+  <app-deal-week class="shadow my-5"></app-deal-week>
 </div>
