--- a/src/app/components/shoes-container/shoe-preview/shoe-preview.component.scss
+++ b/src/app/components/shoes-container/shoe-preview/shoe-preview.component.scss
@@ -33,5 +33,9 @@
   transition: 0.5s;
 }
 .shadow1:hover {
+  transform: translate(2px, 4px);
   box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 50%);
+}
+.singerProduct img:hover {
+  cursor: pointer;
 }
