--- a/src/app/components/shoes-container/shoes-container.component.html
+++ b/src/app/components/shoes-container/shoes-container.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-3" *ngFor="let item of products">
+  <div class="col-3 mb-2" *ngFor="let item of products">
     <app-shoe-preview [numberCharater]="40" [product]="item"></app-shoe-preview>
   </div>
 </div>
