--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-xl" *ngIf="cartService.getCart().length">
   <table class="table mb-4">
     <thead>
       <tr>
@@ -19,14 +19,36 @@
           </div>
         </td>
         <td>
-          <span class="font-weight-bold">{{ item.item.price }}</span>
+          <span class="font-weight-bold">{{
+            item.item.price | currency: "USD"
+          }}</span>
         </td>
         <td>
-          <div style="width: 70px">
-            <input type="number" class="form-control" [value]="item.quantity" />
+          <div style="width: 100px">
+            <span class="border rounded" style="font-size: 15px">
+              <span
+                (click)="cartService.remove(item.item)"
+                class="border-right px-2"
+              >
+                <i class="fas fa-minus"></i>
+              </span>
+              <span class="px-2">{{
+                cartService.getQuantityItem(item.item.id)
+              }}</span>
+              <span
+                (click)="cartService.addItem(item.item)"
+                class="border-left px-2"
+              >
+                <i class="fas fa-plus"></i>
+              </span>
+            </span>
           </div>
         </td>
-        <td><span class="font-weight-bold">$360.00</span></td>
+        <td>
+          <span class="font-weight-bold">{{
+            item.item.price * item.quantity | currency: "USD"
+          }}</span>
+        </td>
       </tr>
       <tr>
         <td>
@@ -54,9 +76,11 @@
       <tr>
         <td colspan="1"></td>
         <td><p class="font-weight-bold">Subtotal</p></td>
-        <td colspan="2"><p class="font-weight-bold">$2160.00</p></td>
+        <td colspan="2">
+          <p class="font-weight-bold">{{ total | currency: "USD" }}</p>
+        </td>
       </tr>
-      <tr>
+      <!-- <tr>
         <td colspan="1"></td>
         <td><p class="font-weight-bold">Shipping</p></td>
         <td colspan="2">
@@ -105,18 +129,18 @@
             </li>
           </ul>
         </td>
-      </tr>
+      </tr> -->
       <tr>
         <td></td>
         <td colspan="3">
-          <div class="d-flex align-items-center">
-            <button
-              class="btn btn-secondary px-5 rounded-0 text-white font-weight-bold"
+          <div class="d-flex align-items-center float-right">
+            <!-- <button
+              class="btn btn-secondary rounded gradient px-5 rounded-0 text-white font-weight-bold"
             >
               CONTINUE SHOPPING
-            </button>
+            </button> -->
             <button
-              class="btn btn-primary gradient px-5 rounded-0 text-white font-weight-bold"
+              class="btn btn-primary rounded gradient px-5 rounded-0 text-white font-weight-bold"
             >
               CHECKOUT
             </button>
@@ -125,4 +149,15 @@
       </tr>
     </tbody>
   </table>
+</div>
+<div
+  class="contaiiner-xl text-center"
+  style="height: 60vh"
+  *ngIf="!cartService.getCart().length"
+>
+  <img src="../../../assets/img/noProductInCart.png" alt="" class="mt-5" />
+  <p class="my-4">No product in my cart</p>
+  <button class="btn btn-primary" routerLink="/categories">
+    Continue Shopping
+  </button>
 </div>
