--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="row container-xl mx-auto m-50 my-50">
+<div class="row login mx-auto m-50 my-50">
   <div class="col signin-container d-flex align-items-center">
     <div class="container mx-auto text-center text-white sign-in">
       <h3>New to our website?</h3>
