--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -11,3 +11,6 @@ button[disabled] {
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
 }
+.login {
+  max-width: 1200px;
+}
