--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -23,9 +23,32 @@
             item.item.price | currency: "USD"
           }}</span>
         </td>
-        <td>
-          <div style="width: 100px">
-            <span class="border rounded" style="font-size: 15px">
+        <td style="width: 120px">
+          <div>
+            <div
+              class="border rounded"
+              style="font-size: 15px"
+              id="add-product"
+            >
+              <button
+                (click)="cartService.remove(item.item)"
+                class="btn border-right px-2"
+              >
+                -
+              </button>
+              <input
+                type="text"
+                [value]="cartService.getQuantityItem(item.item.id)"
+                class="input border-0"
+              />
+              <button
+                (click)="cartService.addItem(item.item)"
+                class="btn border-left px-2"
+              >
+                +
+              </button>
+            </div>
+            <!-- <span class="border rounded" style="font-size: 15px">
               <span
                 (click)="cartService.remove(item.item)"
                 class="border-right px-2"
@@ -41,7 +64,7 @@
               >
                 <i class="fas fa-plus"></i>
               </span>
-            </span>
+            </span> -->
           </div>
         </td>
         <td>
