--- a/src/app/components/shopping-cart/shopping-cart.component.scss
+++ b/src/app/components/shopping-cart/shopping-cart.component.scss
@@ -13,3 +13,15 @@ td {
   margin: 0px;
   padding: 0px;
 }
+#add-product {
+  display: inline-block;
+}
+.input {
+  width: 30px;
+  text-align: center;
+  border: 1px solid rgb(236, 236, 236);
+}
+
+#add-product button:hover {
+  background-color: rgb(228, 217, 217);
+}
