--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="bg-secondary p-5">
+<div class="bg-secondary p-5 mt-5">
   <div class="container my-3">
     <div class="row">
       <div class="col-xl-3 col-md-6 col-sm-12">
