--- a/src/app/components/shopping-cart/shopping-cart.component.scss
+++ b/src/app/components/shopping-cart/shopping-cart.component.scss
@@ -1,15 +1,28 @@
 img {
-  max-width: 150px;
+  max-width: 200px;
   object-fit: cover;
 }
-td {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  vertical-align: middle;
-  align-self: center;
+.shoppping-cart {
+  td {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    vertical-align: middle;
+    align-self: center;
+  }
+}
+.sumary {
+  td {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    vertical-align: middle;
+    align-self: center;
+  }
 }
 .list {
   list-style: none;
   margin: 0px;
   padding: 0px;
 }
+// .gradient {
+//   background-image: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%);
+// }
