--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -71,6 +71,7 @@
                 class="searchInput"
                 type="text"
                 name=""
+                [formControl]="search"
                 placeholder="Search"
               />
               <button class="searchButton">
