--- a/src/app/components/shoes-container/shoe-preview/shoe-preview.component.scss
+++ b/src/app/components/shoes-container/shoe-preview/shoe-preview.component.scss
@@ -1,24 +1,20 @@
 // product
-#title1 {
-  font-size: 14px;
-  font-weight: 800;
-  height: 75px;
-  line-height: 1.6;
-}
 .imgproduct {
   width: 100%;
   height: 200px;
   object-fit: contain;
 }
-.price {
-  font-size: 14px;
+.title {
+  line-height: 1.5em;
+  height: 3em; /* height is 2x line-height, so two lines will display */
+  overflow: hidden; /* prevents extra lines from being visible */
 }
 #icon-product {
   padding-bottom: 20px;
 }
 #icon-product > i {
   color: white;
-  background-color: #828bb2;
+  background-color: rgb(255, 128, 0);
   width: 2em;
   text-align: center;
   line-height: 2em;
