--- a/src/app/components/shoes-container/shoe-preview/shoe-preview.component.html
+++ b/src/app/components/shoes-container/shoe-preview/shoe-preview.component.html
@@ -18,37 +18,44 @@
     </h5>
   </div>
 
-  <div class="my-4" id="icon-product">
-    <i
-      class="fas fa-cart-plus"
-      (click)="cartService.addItem(item)"
-      *ngIf="cartService.getQuantityItem(item.id) === 0; else updateQuantity"
-    ></i>
-    <ng-template #updateQuantity>
-      <div class="border rounded" style="font-size: 15px" id="add-product">
-        <button
-          (click)="cartService.remove(item)"
-          class="btn border-right px-2"
-        >
-          -
-        </button>
-        <input
-          type="text"
-          [value]="cartService.getQuantityItem(item.id)"
-          class="input border-0"
-        />
-        <button
-          (click)="cartService.addItem(item)"
-          class="btn border-left px-2"
-        >
-          +
-        </button>
+  <div class="row my-4">
+    <div class="col">
+      <div
+        id="icon-product"
+        (click)="cartService.addItem(item)"
+        *ngIf="cartService.getQuantityItem(item.id) === 0; else updateQuantity"
+      >
+        <i class="fas fa-shopping-bag"></i>
       </div>
-    </ng-template>
-    <i class="fas fa-heart mx-2 rounded-circle"></i>
-    <i
-      class="fas fa-info mx-2 rounded-circle"
-      routerLink="/productDetail/{{ item['id'] }}"
-    ></i>
+      <ng-template #updateQuantity>
+        <div class="border rounded" style="font-size: 15px" id="add-product">
+          <button
+            (click)="cartService.remove(item)"
+            class="btn border-right px-2"
+          >
+            -
+          </button>
+          <input
+            type="text"
+            [value]="cartService.getQuantityItem(item.id)"
+            class="input border-0"
+          />
+          <button
+            (click)="cartService.addItem(item)"
+            class="btn border-left px-2"
+          >
+            +
+          </button>
+        </div>
+      </ng-template>
+    </div>
+    <div class="col">
+      <div id="icon-product" class="float-right">
+        <i
+          class="fas fa-info mx-2"
+          routerLink="/productDetail/{{ item['id'] }}"
+        ></i>
+      </div>
+    </div>
   </div>
 </div>
