--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -118,3 +118,12 @@ li a {
     padding: 0 6px;
   }
 }
+//search
+.deal-img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.deal * {
+  font-size: 12px;
+}
